fix overlap input port name

--- a/styles/sprotty.css
+++ b/styles/sprotty.css
@@ -185,3 +185,7 @@ svg {
   fill: aquamarine;
   stroke: #000;
 }
+
+#sprotty-container_editLabelUi {
+ z-index: 9;
+}
